fix: wrapping on delete popup

--- a/web/components/browser/popups/DeleteFile.module.scss
+++ b/web/components/browser/popups/DeleteFile.module.scss
@@ -86,6 +86,7 @@
 
 .text {
     margin-bottom: 12px;
+    width: calc(100% - 40px);
 }
 
 @media (max-width: 600px) {
